base classes structure; group object

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,6 @@
-﻿target_sources (oop2_ex01 PRIVATE "main.cpp"
-                                  )
+﻿target_sources (oop2_ex1 PRIVATE "main.cpp"
+                                  "Union.cpp"
+                                  "Intersection.cpp"
+                                  "Difference.cpp"
+                                  "BaseFunction.cpp"
+                                  "Group.cpp")
